garage-ton/garage-ingress-ts.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-tailscale
  namespace: garage
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app.kubernetes.io/instance: garage-release
    app.kubernetes.io/name: garage
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
  loadBalancerClass: tailscale
