garage-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: garage
  namespace: garage
spec:
  hosts:
    - "garage.lag0.com.br"
    - "*.garage.lag0.com.br"
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: garage-release
            port:
              number: 3902
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: garage-s3
  namespace: garage
spec:
  hosts:
    - "s3.lag0.com.br"
    - "*.s3.lag0.com.br"
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: garage-release
            port:
              number: 3900
